syntax = "proto3";
package types;

message FieldType {
  string name = 1;
  string languageCode = 2;
}

message Result {
  string value = 1;
  string fieldType = 2;
  float probability = 3;
  Location location = 4;
  Transformation transformation = 5;
}

message Location {
  sint32 start = 1;
  sint32 end = 2;
  sint32 length = 3;
  sint32 newStart = 4;
  sint32 newEnd = 5;
  sint32 newLength = 6;
}

message Transformation {
  string newValue = 1;
  ReplaceValue replaceValue = 2;
  RedactValue redactValue = 3;
}

message ReplaceValue {
  string newValue = 1;
}

message RedactValue {
}

message RecordTransformation {
}